--- a/YGN.StoreApp/Views/Product/Index.cshtml
+++ b/YGN.StoreApp/Views/Product/Index.cshtml
@@ -1,5 +1,20 @@
 ﻿@model IQueryable<Product>
 
+<div class="row">
+    <div class="col-md-3">
+        @await Component.InvokeAsync("CategoriesMenu")
+
+    </div>
+    <div class="col-md-9">
+
+        <div class="row my-3">
+            @foreach (Product item in Model)
+            {
+                <partial name="_ProductCard" model="@item" />
+            }
+        </div>
+    </div>
+</div>
 
 @section Footer {
     <div>
@@ -7,9 +22,3 @@
     </div>
 }
 
-<div class="row my-3">
-    @foreach (Product item in Model)
-    {
-        <partial name="_ProductCard" model="@item" />
-    }
-</div>
