--- a/YGN.StoreApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/YGN.StoreApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using YGN.StoreApp
 @using YGN.StoreApp.Entities.Models
+@using YGN.StoreApp.Entities.Dtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
