--- a/YGN.StoreApp/Areas/Admin/Views/Product/Create.cshtml
+++ b/YGN.StoreApp/Areas/Admin/Views/Product/Create.cshtml
@@ -4,14 +4,13 @@
     <div class="display-6">Create</div>
 </div>
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="Create" enctype="multipart/form-data">  @* USED |enctype="multipart/form-data"| FOR BINARY DATAS *@
 
     <div class="text-danger" asp-validation-summary="All"></div>
 
     <div class="form-group my-3">
         <label asp-for="CategoryId"></label>
         <select class="form-control" asp-items="@ViewBag.Categories" asp-for="CategoryId">
-
         </select>
     </div>
 
@@ -19,9 +18,20 @@
         <label asp-for="ProductName"></label>
         <input asp-for="ProductName" class="form-control" />
     </div>
+
+    <div class="form-group my-3">
+        <label asp-for="Summary"></label>
+        <input asp-for="Summary" class="form-control" />
+    </div>
+
     <div class="form-group my-3">
         <label asp-for="Price"></label>
         <input asp-for="Price" class="form-control" />
+    </div>
+
+    <div class="form-group my-3">
+        <label asp-for="ImageUrl"></label>
+        <input name="file" type="file" class="form-control" />
     </div>
 
     <div class="form-group my-3">
