--- a/YGN.StoreApp/Areas/Admin/Views/Product/Update.cshtml
+++ b/YGN.StoreApp/Areas/Admin/Views/Product/Update.cshtml
@@ -1,21 +1,43 @@
-﻿@model Product
+﻿@model ProductDtoForUpdate
 
 <div class="text-center">
     <div class="display-6">Create</div>
 </div>
 
-<form method="post" asp-action="Update">
+<form method="post" asp-action="Update" enctype="multipart/form-data">
 
     <div class="text-danger" asp-validation-summary="All">
         <input type="hidden" asp-for="ProductId"/>
     </div>
+
+    <div class="form-group my-3">
+        <label asp-for="CategoryId"></label>
+        <select class="form-control" asp-items="@ViewBag.Categories" asp-for="CategoryId">
+        </select>
+    </div>
+
     <div class="form-group my-3">
         <label asp-for="ProductName"></label>
         <input asp-for="ProductName" class="form-control" />
     </div>
+
+    <div class="form-group my-3">
+        <label asp-for="Summary"></label>
+        <input asp-for="Summary" class="form-control" />
+    </div>
+
     <div class="form-group my-3">
         <label asp-for="Price"></label>
         <input asp-for="Price" class="form-control" />
+    </div>
+
+    <div class="form-group my-3">
+        <img class="rounded shadow" width="150" src="@Model?.ImageUrl"/>
+    </div>
+
+    <div class="form-group my-3">
+        <label asp-for="ImageUrl"></label>
+        <input type="file" name="file" class="form-control" />
     </div>
 
     <div class="form-group my-3">
