--- a/YGN.StoreApp/Areas/Admin/Views/Product/Index.cshtml
+++ b/YGN.StoreApp/Areas/Admin/Views/Product/Index.cshtml
@@ -15,6 +15,7 @@
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Image Url</th>
                 <th>Product Name</th>
                 <th>Price</th>
                 <th>Operations</th>
@@ -25,6 +26,9 @@
             {
                 <tr>
                     <td>@prd.ProductId</td>
+                    <td>
+                        <img height="35" class="rounded" src="@prd.ImageUrl" alt="@prd?.ProductName" width="50"/>
+                    </td>
                     <td>@prd.ProductName</td>
                     <td>@prd.Price.ToString("c")</td>
                     <td>
