--- a/YGN.StoreApp/Views/Product/Get.cshtml
+++ b/YGN.StoreApp/Views/Product/Get.cshtml
@@ -1,8 +1,21 @@
 ﻿@model Product
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="text-center">
+            <h6 class="display-6">
+                @Model.ProductName
+            </h6>
 
-<h3>@Model.ProductName</h3>
-<p>@Model.Price.ToString("c")</p>
+            <img width="275" height="185" class="img-flueid shadow rounded-3 my-3" src="@Model?.ImageUrl" alt="@Model.ProductName" />
+
+            <p class="lead text-danger">@Model.Price.ToString("c")</p>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="btn-group">
     <a class="btn btn-primary" asp-controller="Home" asp-action="Index">
         <i class="fa-solid fa-house"></i>
