--- a/YGN.StoreApp/Views/Shared/_Navbar.cshtml
+++ b/YGN.StoreApp/Views/Shared/_Navbar.cshtml
@@ -24,7 +24,10 @@
             <ul class="navbar-nav text-white">
 
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" asp-area="" asp-page="/Cart">Cart</a>
+                    <a class="nav-link" aria-current="page" asp-area="" asp-page="/Cart">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        Cart (@await Component.InvokeAsync("CartSummary"))
+                    </a>
                 </li>
 
                 <li class="nav-item">
