--- a/YGN.StoreApp/Views/Product/_ProductCard.cshtml
+++ b/YGN.StoreApp/Views/Product/_ProductCard.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Product
 
+
 <div class="col-sm-12 col-md-4 my-2">
     <div class="card" style="width: 18rem;">
         <img src="@Model?.ImageUrl" class="card-img-top" alt="...">
@@ -15,7 +16,7 @@
                 <form id="@Model.ProductId" asp-page="/cart" method="post">
 
                     <input type="hidden" asp-for="ProductId" />
-                    <input type="hidden" name="returnUrl" value="/Product/Get/@Model.ProductId" />
+                    <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
                     <button type="submit" class="btn btn-outline-primary">
                         <i class="fa fa-cart-plus"></i>
                     </button>
