--- a/YGN.StoreApp/Views/_ViewImports.cshtml
+++ b/YGN.StoreApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using YGN.StoreApp
 @using YGN.StoreApp.Entities.Models
+@using YGN.StoreApp.Models
+@using YGN.StoreApp.Infrastructure.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
