--- a/YGN.StoreApp/Views/Order/Checkout.cshtml
+++ b/YGN.StoreApp/Views/Order/Checkout.cshtml
@@ -33,7 +33,7 @@
 
     <div class="text-center">
         <button type="submit" class="btn btn-primary">
-            Complate Order
+            Complete Order
         </button>
     </div>
 </form>
