--- a/YGN.StoreApp/Areas/Admin/Views/Product/Create.cshtml
+++ b/YGN.StoreApp/Areas/Admin/Views/Product/Create.cshtml
@@ -4,7 +4,8 @@
     <div class="display-6">Create</div>
 </div>
 
-<form method="post" asp-action="Create" enctype="multipart/form-data">  @* USED |enctype="multipart/form-data"| FOR BINARY DATAS *@
+<form method="post" asp-action="Create" enctype="multipart/form-data">
+    @* USED |enctype="multipart/form-data"| FOR BINARY DATA *@
 
     <div class="text-danger" asp-validation-summary="All"></div>
 
@@ -17,31 +18,40 @@
     <div class="form-group my-3">
         <label asp-for="ProductName"></label>
         <input asp-for="ProductName" class="form-control" />
+        <span class="text-danger" asp-validation-for="ProductName"></span>
     </div>
 
     <div class="form-group my-3">
         <label asp-for="Summary"></label>
         <input asp-for="Summary" class="form-control" />
+        <span class="text-danger" asp-validation-for="Summary"></span>
     </div>
 
     <div class="form-group my-3">
         <label asp-for="Price"></label>
         <input asp-for="Price" class="form-control" />
+        <span class="text-danger" asp-validation-for="Price"></span>
     </div>
 
     <div class="form-group my-3">
         <label asp-for="ImageUrl"></label>
         <input name="file" type="file" class="form-control" />
+        <span class="text-danger" asp-validation-for="ImageUrl"></span>
+    </div>
+
+    <div class="form-group">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" asp-for="ShowCase" />
+            <label class="form-check-label" asp-for="ShowCase">Show in Case</label>
+        </div>
     </div>
 
     <div class="form-group my-3">
         <div class="btn-group">
-
             <button class="btn btn-primary" type="submit">
                 <i class="fa fa-save"></i>
                 Save
             </button>
-
             <a asp-action="Index" class="btn btn-outline-primary">
                 <i class="fa fa-list"></i>
                 Products
