--- a/YGN.StoreApp/Views/_ViewImports.cshtml
+++ b/YGN.StoreApp/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using YGN.StoreApp.Models
 @using YGN.StoreApp.Infrastructure.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, YGN.StoreApp
