Updated Database and Test

--- a/YGN.StoreApp/Views/Shared/Components/CategoriesMenu/Default.cshtml
+++ b/YGN.StoreApp/Views/Shared/Components/CategoriesMenu/Default.cshtml
@@ -1,4 +1,11 @@
 ﻿@model IEnumerable<Category>
+
+<div class="my-3">
+    <h6 class="lead">
+        <i class="bi bi-bookmark"></i>
+        Categories
+    </h6>
+</div>
 <div class="my-4">
     <ul class="list-group">
         @foreach (var cat in Model)
