--- a/YGN.StoreApp/Views/Shared/Components/ProductFilterMenu/Default.cshtml
+++ b/YGN.StoreApp/Views/Shared/Components/ProductFilterMenu/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Product>
+﻿@* @model IEnumerable<Product> *@
+    @model ProductListViewModel
 <div class="my-3">
     <h6 class="lead">
         <i class="fa fa-filter text-secondary"></i>
