--- a/YGN.StoreApp/Views/Shared/_Footer.cshtml
+++ b/YGN.StoreApp/Views/Shared/_Footer.cshtml
@@ -4,20 +4,7 @@
             <div class="col md-2">2</div>
             <div class="col md-2">8</div>
             <div class="col md-2">
-                <div class="my-3">
-                    <h6 class="lead">
-                        <i class="fa fa-box text-secondary"></i>
-                        Lastest Products
-                    </h6>
-                    <ul>
-                        <li><a href="#">Computer</a></li>
-                        <li><a href="#">Keyboard</a></li>
-                        <li><a href="#">Mouse</a></li>
-                        <li><a href="#">Hamlet</a></li>
-                        <li><a href="#">Denizler Altında 20K Fersah</a></li>
-                    </ul>
-                </div>
-                <div products=""></div>
+                <div products="" number="6"></div>
             </div>
         </div>
     </div>
